Increase line height for code (avoids overlap)

--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ body {
 
 code {
     font-family: "TypoPRO DejaVu Sans Mono", sans-serif;
+    line-height: 1.55;
 }
 
 .head {
